--- a/index.html
+++ b/index.html
@@ -38,16 +38,20 @@
       </p>
     </div>
     <div class="md:w-1/2 mb-10 md:mb-0">
-      <img src="/mnt/data/photo.jpg" alt="Portrait of Erica Kufa" class="w-72 h-72 object-cover mx-auto rounded-full shadow-xl transform transition duration-300 hover:scale-105 hover:shadow-2xl"/>
+      <img src="https://github.com/ericakufa/my_website/blob/main/photo.jpg?raw=true" alt="Portrait of Erica Kufa" class="w-72 h-72 object-cover mx-auto rounded-full shadow-xl transform transition duration-300 hover:scale-105 hover:shadow-2xl"/>
     </div>
   </header>
 
   <!-- About Me -->
-  <section id="about" class="py-12 bg-white px-6 max-w-5xl mx-auto">
-    <h2 class="text-2xl font-semibold text-blue-900 mb-4">About Me</h2>
-    <p class="text-lg text-gray-800">
-      My current work at The Global Fund involves leading KPI reporting, managing programmatic results, and collaborating
-      with global partners to enhance data systems. I specialize in aligning grant performance with strategic health targets.
+  $1
+    <p class="mt-4 text-lg text-gray-800">
+      I bring over two decades of expertise in HIV/AIDS, Tuberculosis, Malaria, Immunization, and Emergency Action programs. 
+      I have extensive experience in data management, M&E systems development, grant performance analysis, and strengthening country health systems.
+      My roles at WHO and The Global Fund have involved leadership in global data harmonization initiatives, impact modelling, and strategic reporting.
+    </p>
+    <p class="mt-4 text-lg text-gray-800">
+      I’ve led collaborations with UNAIDS, WHO, UNICEF, PEPFAR, DFID, and numerous national governments. My work emphasizes data quality, strategic analysis,
+      stakeholder engagement, and the translation of data into action to improve public health outcomes.
     </p>
   </section>
 
@@ -64,12 +68,48 @@
   </section>
 
   <!-- Experience -->
-  <section id="experience" class="py-12 bg-white px-6 max-w-5xl mx-auto">
-    <h2 class="text-2xl font-semibold text-blue-900 mb-4">Experience</h2>
-    <div class="space-y-4 text-lg text-gray-800">
-      <div>
-        <strong>The Global Fund</strong> – Associate Specialist (2012–Present): Led KPI reporting, data quality assurance, and strategic portfolio reviews.
-      </div>
+  $1
+    <p class="text-lg text-gray-800 mb-6">
+      Erica has contributed to developing global M&E frameworks, processed complex datasets into strategic insights, and conducted program evaluations
+      that shaped major health investments. Her background includes leading indicator development, facilitating technical reviews, and building resilient health systems
+      across 50+ countries.
+    </p>
+    <div class="space-y-6 text-lg text-gray-800">
+  <div>
+    <strong>The Global Fund</strong> – Associate Specialist (2012–Present)
+    <ul class="list-disc pl-6 mt-2 space-y-1">
+      <li>Led KPI reporting, managed the PIP database, and supported enterprise portfolio reviews.</li>
+      <li>Developed results dashboards, programmatic tools, and impact reports used across departments.</li>
+      <li>Collaborated with WHO, UNAIDS, UNICEF, and PEPFAR to harmonize HIV-related data reporting.</li>
+      <li>Supported grant reviews, country consultations, and strategy alignment for funding cycles.</li>
+    </ul>
+  </div>
+  <div>
+    <strong>WHO AFRO</strong> – Technical Officer, HIV/TB (2001–2011)
+    <ul class="list-disc pl-6 mt-2 space-y-1">
+      <li>Established regional HIV surveillance and M&E systems across 46 African countries.</li>
+      <li>Produced regional epidemiological updates and trained national teams on data analysis.</li>
+      <li>Supported strategic investments and epidemic modeling with WHO and UNAIDS.</li>
+      <li>Coordinated the AFRO Regional HIV Surveillance Network and annual estimation workshops.</li>
+    </ul>
+  </div>
+  <div>
+    <strong>WHO Southern Africa</strong> – EPI Data Manager (1999–2001)
+    <ul class="list-disc pl-6 mt-2 space-y-1">
+      <li>Managed AFP, measles, and immunization surveillance data across Southern Africa.</li>
+      <li>Published monthly bulletins and trained country data managers.</li>
+      <li>Contributed to GAVI proposal support and WHO measles elimination studies.</li>
+    </ul>
+  </div>
+  <div>
+    <strong>WHO Consultancies</strong> – (2011–2012)
+    <ul class="list-disc pl-6 mt-2 space-y-1">
+      <li>Developed DQA tools and outbreak alert systems for WHO Somalia and Horn of Africa teams.</li>
+      <li>Implemented mobile survey tools for Botswana’s malaria survey and trained local staff.</li>
+      <li>Mapped emergency health response activities and collaborated on population survey planning.</li>
+    </ul>
+  </div>
+</div>
       <div>
         <strong>WHO AFRO</strong> – Technical Officer, HIV/TB (2001–2011): Developed surveillance systems and M&E frameworks across 46 countries.
       </div>
@@ -113,3 +153,4 @@
 
 </body>
 </html>
+
