--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </p>
     </div>
     <div class="md:w-1/2 mb-10 md:mb-0">
-      <img src="https://github.com/ericakufa/my_website/blob/main/photo.jpg?raw=true" alt="Portrait of Erica Kufa" class="w-72 h-72 object-cover mx-auto rounded-full shadow-xl transform transition duration-300 hover:scale-105 hover:shadow-2xl"/>
+      <img src="photo.jpg" alt="Portrait of Erica Kufa" class="w-72 h-72 object-cover mx-auto rounded-full shadow-xl transform transition duration-300 hover:scale-105 hover:shadow-2xl"/>
     </div>
   </header>
 
