--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
       <p class="mt-4 text-lg text-gray-700">
         I am a public health expert with over 21 years of experience across Africa, focusing on monitoring and evaluation,
         strategic information, and public health systems strengthening. My work has contributed to HIV, TB, Malaria, and
-        immunization programs globally.
+        immunization programs globally. I have extensive experience leading the development, adaptation and roll-out of
+normative guidance, development and implementation of M&E frameworks, and data collection and reporting
+tools. Over the years I have collaborated with national program, bilateral and multilateral at national, regional
+and global HQ level counterparts to identify strategic information needs, develop guidance and tools and support
+implementation of monitoring and evaluation and broader strategic information strategies as part of
+strengthening country data information systems and health systems at large. I have supported programme
+reviews, assessments and evaluations in designing protocols, analysis, report writing through dissemination of
+findings. 
       </p>
     </div>
     <div class="md:w-1/2 mb-10 md:mb-0">
@@ -42,20 +49,6 @@
     </div>
   </header>
 
-  <!-- About Me -->
-  $1
-    <p class="mt-4 text-lg text-gray-800">
-      I bring over two decades of expertise in HIV/AIDS, Tuberculosis, Malaria, Immunization, and Emergency Action programs. 
-      I have extensive experience in data management, M&E systems development, grant performance analysis, and strengthening country health systems.
-      My roles at WHO and The Global Fund have involved leadership in global data harmonization initiatives, impact modelling, and strategic reporting.
-    </p>
-    <p class="mt-4 text-lg text-gray-800">
-      I’ve led collaborations with UNAIDS, WHO, UNICEF, PEPFAR, DFID, and numerous national governments. My work emphasizes data quality, strategic analysis,
-      stakeholder engagement, and the translation of data into action to improve public health outcomes.
-    </p>
-  </section>
-
-  <!-- Education -->
   <section id="education" class="py-12 px-6 max-w-5xl mx-auto">
     <h2 class="text-2xl font-semibold text-blue-900 mb-4">Education</h2>
     <ul class="list-disc pl-6 text-lg text-gray-800 space-y-2">
@@ -68,12 +61,8 @@
   </section>
 
   <!-- Experience -->
-  $1
-    <p class="text-lg text-gray-800 mb-6">
-      Erica has contributed to developing global M&E frameworks, processed complex datasets into strategic insights, and conducted program evaluations
-      that shaped major health investments. Her background includes leading indicator development, facilitating technical reviews, and building resilient health systems
-      across 50+ countries.
-    </p>
+  
+    
     <div class="space-y-6 text-lg text-gray-800">
   <div>
     <strong>The Global Fund</strong> – Associate Specialist (2012–Present)
@@ -153,4 +142,3 @@
 
 </body>
 </html>
-
