--- a/index.html
+++ b/index.html
@@ -34,14 +34,7 @@
       <p class="mt-4 text-lg text-gray-700">
         I am a public health expert with over 21 years of experience across Africa, focusing on monitoring and evaluation,
         strategic information, and public health systems strengthening. My work has contributed to HIV, TB, Malaria, and
-        immunization programs globally. I have extensive experience leading the development, adaptation and roll-out of
-normative guidance, development and implementation of M&E frameworks, and data collection and reporting
-tools. Over the years I have collaborated with national program, bilateral and multilateral at national, regional
-and global HQ level counterparts to identify strategic information needs, develop guidance and tools and support
-implementation of monitoring and evaluation and broader strategic information strategies as part of
-strengthening country data information systems and health systems at large. I have supported programme
-reviews, assessments and evaluations in designing protocols, analysis, report writing through dissemination of
-findings. 
+        immunization programs globally. 
       </p>
     </div>
     <div class="md:w-1/2 mb-10 md:mb-0">
