--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p class="mt-4 text-lg text-gray-700">
         I am a public health expert with over 21 years of experience across Africa, focusing on monitoring and evaluation,
         strategic information, and public health systems strengthening. My work has contributed to HIV, TB, Malaria, and
-        immunization programs globally. 
+        immunization programs globally.
       </p>
     </div>
     <div class="md:w-1/2 mb-10 md:mb-0">
@@ -53,49 +53,62 @@
     </ul>
   </section>
 
-  <!-- Experience -->
-  
-    
-    <div class="space-y-6 text-lg text-gray-800">
-  <div>
-    <strong>The Global Fund</strong> – Associate Specialist (2012–Present)
-    <ul class="list-disc pl-6 mt-2 space-y-1">
-      <li>Led KPI reporting, managed the PIP database, and supported enterprise portfolio reviews.</li>
-      <li>Developed results dashboards, programmatic tools, and impact reports used across departments.</li>
-      <li>Collaborated with WHO, UNAIDS, UNICEF, and PEPFAR to harmonize HIV-related data reporting.</li>
-      <li>Supported grant reviews, country consultations, and strategy alignment for funding cycles.</li>
-    </ul>
-  </div>
-  <div>
-    <strong>WHO AFRO</strong> – Technical Officer, HIV/TB (2001–2011)
-    <ul class="list-disc pl-6 mt-2 space-y-1">
-      <li>Established regional HIV surveillance and M&E systems across 46 African countries.</li>
-      <li>Produced regional epidemiological updates and trained national teams on data analysis.</li>
-      <li>Supported strategic investments and epidemic modeling with WHO and UNAIDS.</li>
-      <li>Coordinated the AFRO Regional HIV Surveillance Network and annual estimation workshops.</li>
-    </ul>
-  </div>
-  <div>
-    <strong>WHO Southern Africa</strong> – EPI Data Manager (1999–2001)
-    <ul class="list-disc pl-6 mt-2 space-y-1">
-      <li>Managed AFP, measles, and immunization surveillance data across Southern Africa.</li>
-      <li>Published monthly bulletins and trained country data managers.</li>
-      <li>Contributed to GAVI proposal support and WHO measles elimination studies.</li>
-    </ul>
-  </div>
-  <div>
-    <strong>WHO Consultancies</strong> – (2011–2012): Strengthened surveillance in Somalia, Botswana, and Horn of Africa.
-  </div>
-</div>
-      <div>
-        <strong>WHO AFRO</strong> – Technical Officer, HIV/TB (2001–2011): Developed surveillance systems and M&E frameworks across 46 countries.
-      </div>
-      <div>
-        <strong>WHO Southern Africa</strong> – EPI Data Manager (1999–2001): Led immunization data systems and disease surveillance.
-      </div>
-      
+<!-- Experience -->
+<section id="experience" class="py-12 px-6 max-w-5xl mx-auto">
+  <h2 class="text-2xl font-semibold text-blue-900 mb-4">Experience</h2>
+  <div class="space-y-6 text-lg text-gray-800">
+    <div>
+      <strong>The Global Fund</strong> – Associate Specialist (2012–Present)
+      <ul class="list-disc pl-6 mt-2 space-y-1">
+        <li>Led KPI reporting, managed the PIP database, and supported enterprise portfolio reviews.</li>
+        <li>Developed results dashboards, programmatic tools, and impact reports used across departments.</li>
+        <li>Collaborated with WHO, UNAIDS, UNICEF, and PEPFAR to harmonize HIV-related data reporting.</li>
+        <li>Supported grant reviews, country consultations, and strategy alignment for funding cycles.</li>
+      </ul>
     </div>
-  </section>
+    <div>
+      <strong>WHO AFRO</strong> – Technical Officer, HIV/TB (2001–2011)
+      <ul class="list-disc pl-6 mt-2 space-y-1">
+        <li>Established regional HIV surveillance and M&E systems across 46 African countries.</li>
+        <li>Produced regional epidemiological updates and trained national teams on data analysis.</li>
+        <li>Supported strategic investments and epidemic modeling with WHO and UNAIDS.</li>
+        <li>Coordinated the AFRO Regional HIV Surveillance Network and annual estimation workshops.</li>
+      </ul>
+    </div>
+<div>
+  <strong>WHO Consultancies</strong> – (2011–2012)
+  <ul class="list-disc pl-6 mt-2 space-y-1">
+    <li>
+      <strong>June - October 2012</strong> – WHO Somalia Liaison Office, Nairobi, Kenya<br>
+      • Developed and supported data quality assessment tools for regional surveillance focal points.<br>
+      • Mentored focal points in data quality assurance and managed outbreak alert and surveillance databases.<br>
+      • Compiled and analyzed weekly data on epidemic-prone diseases and produced epidemiological updates.<br>
+      • Participated in Health and Wash Cluster meetings, contributing to joint planning for the Somalia Population Survey.
+    </li>
+    <li>
+      <strong>February - March 2012</strong> – WHO Botswana Country Office, Gaborone<br>
+      • Supported the Botswana Malaria Indicator Survey by installing GPS software and digital survey tools.<br>
+      • Trained field staff on PDAs for household mapping, data collection, backup, and troubleshooting.
+    </li>
+    <li>
+      <strong>August - December 2011</strong> – WHO Horn of Africa Health Emergency Support, Nairobi, Kenya<br>
+      • Led surveillance data collection and weekly epidemiological updates from Horn of Africa countries.<br>
+      • Maintained a 4W Matrix mapping emergency interventions and strengthened country office capacity for emergency response.
+    </li>
+  </ul>
+</div>
+
+<div>
+  <strong>WHO Southern Africa</strong> – EPI Data Manager (1999–2001)
+  <ul class="list-disc pl-6 mt-2 space-y-1">
+    <li>Managed AFP, measles, and immunization surveillance data across Southern Africa.</li>
+    <li>Published monthly bulletins and trained country data managers.</li>
+    <li>Contributed to GAVI proposal support and WHO measles elimination studies.</li>
+  </ul>
+</div>
+  </div>
+</section>
+
 
   <!-- Publications -->
   <section id="publications" class="py-12 px-6 max-w-5xl mx-auto">
